--- a/FilterBubbles/page/public/twittertemplate.css
+++ b/FilterBubbles/page/public/twittertemplate.css
@@ -5,6 +5,10 @@
    margin: 0 !important;
 }
 
+.subcategorybutton{
+	margin-top: 5px;
+}
+
 .loader {
     border: 4px solid #f3f3f3; /* Light grey */
     border-top: 4px solid #3498db; /* Blue */
