--- a/FilterBubbles/page/public/twittertemplate.css
+++ b/FilterBubbles/page/public/twittertemplate.css
@@ -9,6 +9,13 @@
 	margin-top: 5px;
 }
 
+#btnProfileCreated{
+	margin: 10px;
+	    float: right;
+
+
+}
+
 .loader {
     border: 4px solid #f3f3f3; /* Light grey */
     border-top: 4px solid #3498db; /* Blue */
